--- a/ros-rtt_soem/install.yaml
+++ b/ros-rtt_soem/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/smits/soem.git
+      url: https://github.com/orocos/rtt_soem
 
