Fixed soem components installation
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@26922 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-soem_beckhoff_drivers/install.yaml
+++ b/ros-soem_beckhoff_drivers/install.yaml
@@ -1,3 +1,5 @@
-- type: target
-  name: ros-rtt_soem
-
+- type: ros
+  source:
+      type: git
+      url: https://github.com/orocos/rtt_soem
+      sub-dir: soem_beckhoff_drivers
