rsettings works again; added amigo-user target
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27002 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -16,3 +16,8 @@
 - type: target
   name: ros-ed
 
+# -------------------- ROBOTS --------------------
+
+# AMIGO
+- type: target
+  name: amigo-user
