tue-dev target almost complete for amigo middleware
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27013 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/amigo-user/install.yaml
+++ b/amigo-user/install.yaml
@@ -8,3 +8,11 @@
   name: ros-tf_server
 - type: target
   name: ros-node_alive
+- type: target
+  name: ros-amigo_maps
+- type: target
+  name: ros-amigo_head_ref
+- type: target
+  name: ros-amigo_gripper_server
+- type: target
+  name: ros-amigo_spindle_server
