--- a/ros-scan_to_cloud_converter/install.yaml
+++ b/ros-scan_to_cloud_converter/install.yaml
@@ -1,3 +1,8 @@
-- type: target
-  name: ros-scan_tools
+- type: ros
+  source:
+      type: git
+      url: https://github.com/ccny-ros-pkg/scan_tools.git
+      sub-dir: scan_to_cloud_converter
+
+
 
