--- a/ros-gazebo_map_maker/install.yaml
+++ b/ros-gazebo_map_maker/install.yaml
@@ -2,4 +2,6 @@
   source:
       type: svn
       url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/gazebo_map_maker
+- type: target
+  name: gazebo
 
