--- a/ros-tue_gazebo_plugins/install.yaml
+++ b/ros-tue_gazebo_plugins/install.yaml
@@ -2,4 +2,6 @@
   source:
       type: svn
       url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/tue_gazebo_plugins
+- type: target
+  name: gazebo
 
