--- a/tue-hardware/install.yaml
+++ b/tue-hardware/install.yaml
@@ -1,3 +1,9 @@
 - type: target
-  name: ros-rtt_interfacing_components
+  name: ros-soem_master
+- type: target
+  name: ros-soem_beckhoff_drivers
+- type: target
+  name: ros-soem_core
+- type: target
   name: ros-rtt_control_components
+
