--- a/ros-head_ref/install.yaml
+++ b/ros-head_ref/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/head_ref
+      type: git
+      url: https://github.com/tue-robotics/head_ref.git
 
