Better install for amigo1
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27130 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/amigo1/install.yaml
+++ b/amigo1/install.yaml
@@ -1,4 +1,12 @@
+# Middleware
 - type: target
-  name: tue-dev
+  name: tue-middleware
+
+# Sensors
 - type: target
   name: ros-hokuyo_node
+
+# AMIGO aliases
+- type: target
+  name: amigo-user
+
