--- a/ros-tue_reasoner_core/install.yaml
+++ b/ros-tue_reasoner_core/install.yaml
@@ -2,4 +2,6 @@
   source:
       type: svn
       url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/tue_reasoner_core
+- type: target
+  name: swi-prolog
 
