--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -1,6 +1,8 @@
 # Simulation
 - type: target
   name: ros-fast_simulator
+- type: target
+  name: ros-fast_simulator_data
 
 # Middleware
 - type: target
