Added system dep
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27145 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-laser_ppl_detection/install.yaml
+++ b/ros-laser_ppl_detection/install.yaml
@@ -2,4 +2,6 @@
   source:
       type: svn
       url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/laser_ppl_detection
+- type: system
+  name: libgsl0-dev
 
