use my own version
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27146 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-amigo_whole_body_controller/install.yaml
+++ b/ros-amigo_whole_body_controller/install.yaml
@@ -1,5 +1,4 @@
 - type: ros-rosbuild
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_actuation/amigo_whole_body_controller
-    
+      url: https://github.com/Rayman/amigo_whole_body_controller.git
