Added missing deps for astart
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27147 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -2,6 +2,11 @@
 - type: target
   name: tue-common
 
+- type: target
+  name: ros-robot_state_publisher
+- type: target
+  name: ros-diagnostic_aggregator
+
 # Executive
 
 # Navigation
