--- a/ros-challenge_logger/install.yaml
+++ b/ros-challenge_logger/install.yaml
@@ -2,4 +2,6 @@
   source:
       type: svn
       url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/challenge_logger
+- type: system
+  name: python-psutil
 
