Added needed diagnostics
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27153 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -4,8 +4,12 @@
 
 - type: target
   name: ros-robot_state_publisher
+
+# Diagnostics (TODO: Is this needed? Causes HDDtemp question on install)
 - type: target
   name: ros-diagnostic_aggregator
+- type: target
+  name: sysstat
 
 # Executive
 
