Added needed diagnostics
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27155 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -8,7 +8,7 @@
 # Diagnostics (TODO: Is this needed? Causes HDDtemp question on install)
 - type: target
   name: ros-diagnostic_aggregator
-- type: target
+- type: system
   name: sysstat
 
 # Executive
