Added rviz to tue-dev
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27158 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -8,6 +8,10 @@
 - type: target
   name: tue-middleware
 
+# Visualization
+- type: target
+  name: ros-rviz
+
 # -------------------- ROBOTS --------------------
 
 # AMIGO
