--- a/ros-ed_object_models/install.yaml
+++ b/ros-ed_object_models/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/ed_object_models
+      type: git
+      url: https://github.com/tue-robotics/ed_object_models.git
 
