Added non-ros target for libsiftfast
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27277 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-libsiftfast/install.yaml
+++ b/ros-libsiftfast/install.yaml
@@ -1,5 +1,5 @@
-- type: ros
+- type: ros-rosbuild
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/data/mirror/jsk-ros-pkg/catkin/libsiftfast
+      url: https://roboticssrv.wtb.tue.nl/svn/data/mirror/jsk-ros-pkg/libsiftfast
 
