--- a/ros-pein_odufinder/install.yaml
+++ b/ros-pein_odufinder/install.yaml
@@ -2,4 +2,6 @@
   source:
       type: svn
       url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_pein/pein_odufinder
+- type: target
+  name: libsiftfast
     
