tue-dev now installs all perception packages in hydro
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27296 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -48,6 +48,14 @@
   name: ros-pein_color_matcher
 - type: target
   name: ros-pein_wire_interface
+- type: target
+  name: ros-pein_face_segmentation
+- type: target
+  name: ros-pein_odufinder
+- type: target
+  name: ros-pein_ar_pose
+- type: target
+  name: ros-pein_face_recognition
 
 # World model
 - type: target
