--- a/ros-pein_ar_pose/install.yaml
+++ b/ros-pein_ar_pose/install.yaml
@@ -1,5 +1,5 @@
-- type: ros-rosbuild
+- type: ros
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_pein/pein_ar_pose
+      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/pein_ar_pose
     
