--- a/ros-pein_odufinder/install.yaml
+++ b/ros-pein_odufinder/install.yaml
@@ -1,7 +1,7 @@
-- type: ros-rosbuild
+- type: ros
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_pein/pein_odufinder
+      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/pein_odufinder
 - type: target
   name: libsiftfast
     
