Replaced some hard-coded paths by variables
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27368 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/amigo-user/install.yaml
+++ b/amigo-user/install.yaml
@@ -1,6 +1,8 @@
 - type: target
   name: tue-common
 - type: target
+  name: robot-user
+- type: target
   name: ros-amigo_launch_files
 
 # TODO: sort out
