--- a/tue-hardware/install.yaml
+++ b/tue-hardware/install.yaml
@@ -8,3 +8,7 @@
   name: ros-rtt_control_components
 - type: target
   name: ros-tue_ethercat_drivers
+- type: target
+  name: ros-amigo_hardware
+#- type: target
+#  name: ros-sergio_hardware
