--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -14,6 +14,11 @@
 - type: target
   name: ros-rviz
 
+# -------------------- ROBOCUP --------------------
+
+- type: target
+  name: tue-robocup-at-home
+
 # -------------------- ROBOTS --------------------
 
 # AMIGO
