Added missing dep for artoolkit
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27545 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-artoolkit/install.yaml
+++ b/ros-artoolkit/install.yaml
@@ -2,3 +2,5 @@
   source:
       type: svn
       url: https://roboticssrv.wtb.tue.nl/svn/data/mirror/ccny_vision/catkin/artoolkit
+- type: target
+  name: glut
