--- a/amigo3/install.yaml
+++ b/amigo3/install.yaml
@@ -1,6 +1,22 @@
+# astart
 - type: target
-  name: tue-dev
+  name: ros-battery_manager
+
+# Middleware
+- type: target
+  name: tue-middleware
+
+# Sensors
+- type: target
+  name: ros-hokuyo_node
+- type: target
+  name: ros-openni_launch
+
+# AMIGO aliases
+- type: target
+  name: amigo-user
 
 # RoboCup
 - type: target
   name: tue-robocup-at-home
+
