targets to install sergio1 added and modified
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27551 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/sergio1/install.yaml
+++ b/sergio1/install.yaml
@@ -1,8 +1,7 @@
 - type: target
   name: tue-hardware
 
+  # SERGIO
 - type: target
-  name: tue-common
-- type: target
-  name: robot-user
+  name: sergio-user
 
