Added shared amigo target
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27672 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/amigo2/install.yaml
+++ b/amigo2/install.yaml
@@ -1,11 +1,7 @@
 - type: target
-  name: tue-dev
+  name: amigo
+
+# Hardware support
 - type: target
   name: tue-hardware
-
-# Sensors
-- type: target
-  name: ros-hokuyo_node
-- type: target
-  name: ros-openni_launch
 
