--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -14,6 +14,12 @@
 - type: target
   name: ros-rviz
 
+# Diagnostics
+- type: ros
+  source:
+      type: system
+      name: rqt
+
 # -------------------- ROBOCUP --------------------
 
 - type: target
