--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -18,7 +18,7 @@
 - type: ros
   source:
       type: system
-      name: rqt
+      name: viz
 
 # -------------------- ROBOCUP --------------------
 
