the wbp is now in my github user
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27761 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-whole_body_planner/install.yaml
+++ b/ros-whole_body_planner/install.yaml
@@ -1,5 +1,5 @@
 - type: ros-rosbuild
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_actuation/whole_body_planner
+      url: https://github.com/Rayman/whole_body_planner.git
     
