Updated egpsr install target
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27782 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-challenge_egpsr/install.yaml
+++ b/ros-challenge_egpsr/install.yaml
@@ -1,5 +1,4 @@
-- type: ros-rosbuild
+- type: ros
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_robocup/challenge_egpsr
-    
+      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/challenge_egpsr   
