fix the wbp target
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@27837 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-whole_body_planner/install.yaml
+++ b/ros-whole_body_planner/install.yaml
@@ -1,5 +1,5 @@
-- type: ros-rosbuild
+- type: ros
   source:
-      type: svn
+      type: git
       url: https://github.com/Rayman/whole_body_planner.git
     
