--- a/ros-sergio_description/install.yaml
+++ b/ros-sergio_description/install.yaml
@@ -1,5 +1,5 @@
-- type: ros-rosbuild
+- type: ros
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/sergio_common/sergio_description
+      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/sergio_description
     
