--- a/sergio-user/install.yaml
+++ b/sergio-user/install.yaml
@@ -4,3 +4,10 @@
   name: robot-user
 - type: target
   name: ros-sergio_launch_files
+- type: target
+  name: ros-sergio_description
+- type: target
+  name: ros-sergio_machine_files
+- type: target
+  name: ros-sergio_parameters
+  
