--- a/ros-robot_skills/install.yaml
+++ b/ros-robot_skills/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/robot_skills
+      type: git
+      url: https://github.com/tue-robotics/robot_skills.git
     
