--- a/ros-challenge_rips/install.yaml
+++ b/ros-challenge_rips/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/challenge_rips
-    
+      type: git
+      url: https://github.com/tue-robotics/challenge_rips.git
+
