Added dwa planner
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@28005 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -26,6 +26,8 @@
 # Navigation
 - type: target
   name: ros-cb_base_navigation
+- type: target
+  name: ros-dwa_local_planner
 
 # Manipulation
 - type: target
