--- a/ros-challenge_final/install.yaml
+++ b/ros-challenge_final/install.yaml
@@ -1,5 +1,5 @@
-- type: ros-rosbuild
+- type: ros
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_robocup/challenge_final
+      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/challenge_final 
     
