--- a/ros-person_emergency_detector/install.yaml
+++ b/ros-person_emergency_detector/install.yaml
@@ -1,5 +1,4 @@
-- type: ros-rosbuild
+- type: ros
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/person_emergency_detector
-    
+      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/person_emergency_detector 
