Fixed infinite loop
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@28193 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -69,6 +69,8 @@
 - type: target
   name: ros-ed
 - type: target
+  name: ros-ed_gui_server
+- type: target
   name: ros-tue_reasoner_core
 - type: target
   name: ros-tue_knowledge
