--- a/amigo/install.yaml
+++ b/amigo/install.yaml
@@ -18,6 +18,10 @@
 - type: target
   name: amigo-user
 
+# git commit hooks
+- type: target
+  name: git-hooks
+
 # RoboCup
 - type: target
   name: tue-robocup-at-home
