--- a/ros-dialogue_manager/install.yaml
+++ b/ros-dialogue_manager/install.yaml
@@ -1,5 +1,5 @@
-- type: ros-rosbuild
+- type: ros
   source:
       type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_human_machine_interfacing/dialogue_manager
+      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/dialogue_manager
     
