--- a/ros-ed_gui_server/install.yaml
+++ b/ros-ed_gui_server/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/ed_gui_server
+      type: git
+      url: https://github.com/tue-robotics/ed_gui_server.git
 
