challenge_follow_me to github
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@28259 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/ros-tue_carrot_planner/install.yaml
+++ b/ros-tue_carrot_planner/install.yaml
@@ -1,5 +1,5 @@
-- type: ros-rosbuild
+- type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_navigation/tue_carrot_planner
+      type: git
+      url: https://github.com/tue-robotics/tue_carrot_planner.git
     
