--- a/ros-fast_simulator/install.yaml
+++ b/ros-fast_simulator/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/fast_simulator
+      type: git
+      url: https://github.com/tue-robotics/fast_simulator.git
 
