--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -20,6 +20,10 @@
       type: system
       name: viz
 
+# git aliases, commit hooks and git-su
+- type: target
+  name: git-hooks
+
 # -------------------- ROBOCUP --------------------
 
 - type: target
