Added ros emergency speakup
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@28310 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/amigo/install.yaml
+++ b/amigo/install.yaml
@@ -3,6 +3,9 @@
 # astart
 - type: target
   name: ros-battery_manager
+  
+- type: target
+  name: ros-emergency_speakup
 
 # Middleware
 - type: target
