--- a/amigo/install.yaml
+++ b/amigo/install.yaml
@@ -7,6 +7,9 @@
 - type: target
   name: ros-emergency_speakup
 
+- type: target
+  name: ros-rgb_lights_manager
+
 # Middleware
 - type: target
   name: tue-middleware
