--- a/ros-ed_simulator/install.yaml
+++ b/ros-ed_simulator/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/ed_simulator
-
+      type: git
+      url: https://github.com/tue-robotics/ed_simulator.git
