And (temporarily) rolled back the changes
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@28334 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/amigo-user/install.yaml
+++ b/amigo-user/install.yaml
@@ -17,4 +17,6 @@
 - type: target
   name: ros-amigo_head_ref
 - type: target
+  name: ros-amigo_gripper_server
+- type: target
   name: ros-torso_server
