--- a/ros-challenge_rips/install.yaml
+++ b/ros-challenge_rips/install.yaml
@@ -1,5 +1,6 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/challenge_rips.git
+      url: https://github.com/tue-robotics/tue_robocup.git
+      sub-dir: challenge_rips
 
