--- a/ros-challenge_cocktail_party/install.yaml
+++ b/ros-challenge_cocktail_party/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/challenge_cocktail_party
-    
+      type: git
+      url: https://github.com/tue-robotics/tue_robocup.git
+      sub-dir: challenge_cocktail_party
