--- a/ros-challenge_emergency/install.yaml
+++ b/ros-challenge_emergency/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/challenge_emergency 
+      type: git
+      url: https://github.com/tue-robotics/tue_robocup.git
+      sub-dir: challenge_emergency
