--- a/ros-challenge_follow_me/install.yaml
+++ b/ros-challenge_follow_me/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/challenge_follow_me.git
-    
+      url: https://github.com/tue-robotics/tue_robocup.git
+      sub-dir: challenge_follow_me
