use the new tue_robocup meta package
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/tue_env@28364 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/tue-robocup-at-home/install.yaml
+++ b/tue-robocup-at-home/install.yaml
@@ -1,5 +1,3 @@
 # Challenges
 - type: target
-  name: ros-challenge_rips
-- type: target
-  name: ros-challenge_cocktail_party
+  name: ros-tue_robocup
