--- a/sergio1/install.yaml
+++ b/sergio1/install.yaml
@@ -6,4 +6,8 @@
   name: sergio-user
 - type: target
   name: ros-sergio_machine_files
+  
+  # temporary placed in sergio1, when all PC's are in use check what should be installd on which PC?
+- type: target
+  name: ros-tue_manipulation
 
