--- a/ros-sergio_description/install.yaml
+++ b/ros-sergio_description/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/sergio_description
+      type: git
+      url: https://github.com/tue-robotics/sergio_description.git
     
