also install spot

--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -20,6 +20,8 @@
       type: system
       name: viz
 
+- type: target
+  name: spot
 # git aliases, commit hooks and git-su
 - type: target
   name: git-hooks
