--- a/ros-geolib2/install.yaml
+++ b/ros-geolib2/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/geolib2
+      type: git
+      url: https://github.com/tue-robotics/geolib2
 
