--- a/ros-amigo_launch_files/install.yaml
+++ b/ros-amigo_launch_files/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/amigo_launch_files
+      type: git
+      url: https://github.com/tue-robotics/amigo_launch_files
 
