--- a/ros-stem_tracker/install.yaml
+++ b/ros-stem_tracker/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/stem_tracker
+      type: git
+      url: https://github.com/tue-robotics/stem_tracker
 
