--- a/ros-tue_manipulation/install.yaml
+++ b/ros-tue_manipulation/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/tue_manipulation
-
+      type: git
+      url: https://github.com/tue-robotics/tue_manipulation
