--- a/ros-tue_reasoner_core/install.yaml
+++ b/ros-tue_reasoner_core/install.yaml
@@ -1,7 +1,7 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/tue_reasoner_core
+      type: git
+      url: https://github.com/tue-robotics/tue_reasoner_core
 - type: target
   name: swi-prolog
 
