--- a/ros-fast_simulator_data/install.yaml
+++ b/ros-fast_simulator_data/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/data/data-pkgs/fast_simulator_data
-
+      type: git
+      url: https://github.com/tue-robotics/fast_simulator_data
