--- a/ros-virtual_cam/install.yaml
+++ b/ros-virtual_cam/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/virtual_cam
+      type: git
+      url: https://github.com/tue-robotics/virtual_cam
 
