--- a/ros-challenge_restaurant/install.yaml
+++ b/ros-challenge_restaurant/install.yaml
@@ -1,5 +1,6 @@
-- type: ros-rosbuild
+- type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/code/tue-ros-pkg/trunk/tue_robocup/challenge_restaurant
+      type: git
+      url: https://github.com/tue-robotics/tue_robocup.git
+      sub-dir: challenge_restaurant
     
