--- a/ros-emergency_speakup/install.yaml
+++ b/ros-emergency_speakup/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/emergency_speakup
-
+      type: git
+      url: git@github.com:tue-robotics/emergency_speakup.git
