--- a/sjoerd/install.yaml
+++ b/sjoerd/install.yaml
@@ -1,6 +1,10 @@
 - type: target
   name: tue-dev
 
+# DEV
+- type: target
+  name: ros-fast_simulator2
+
 # ED
 - type: target
   name: ros-ed_sensor_integration
