--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -49,6 +49,8 @@
 - type: target
   name: ros-ed_gui_server
 - type: target
+  name: ros-ed_localization
+- type: target
   name: ros-tue_reasoner_core
 - type: target
   name: ros-tue_knowledge
