Added amigo-user to tue-dev-ubuntu-14.04

--- a/tue-dev-ubuntu-14.04/install.yaml
+++ b/tue-dev-ubuntu-14.04/install.yaml
@@ -48,3 +48,9 @@
 - type: target
   name: git-hooks
 
+# -------------------- ROBOTS --------------------
+
+# AMIGO
+- type: target
+  name: amigo-user-ubuntu-14.04
+
