--- a/sergio1/install.yaml
+++ b/sergio1/install.yaml
@@ -1,12 +1,9 @@
 - type: target
-  name: tue-hardware
+  name: sergio
 
-  # SERGIO
 - type: target
-  name: sergio-user
-- type: target
-  name: ros-sergio_machine_files
-  
+  name: tue-hardware
+ 
   # temporary placed in sergio1, when all PC's are in use check what should be installd on which PC?
 - type: target
   name: tue-middleware
