fork rosbridge_suite

--- a/ros-rosbridge_library/install.yaml
+++ b/ros-rosbridge_library/install.yaml
@@ -2,4 +2,4 @@
   source:
       type: git
       url: https://github.com/tue-robotics/rosbridge_suite.git
-      sub-dir: rosbridge_suite
+      sub-dir: rosbridge_library
