--- a/tue-shortcuts/shortcuts/terminatoramigossergios.desktop
+++ b/tue-shortcuts/shortcuts/terminatoramigossergios.desktop
@@ -5,14 +5,14 @@ Name=Terminator
 Comment=Multiple terminals in one window
 TryExec=terminator
 Exec=terminator -ml amigossergios
-Icon=/home/amigo/.tue/installer/targets/tue-shortcuts/icons/terminatorAmigosSergios.png
+Icon=/usr/share/pixmaps/tue/terminatorAmigosSergios.png
 Type=Application
 Categories=GNOME;GTK;Utility;TerminalEmulator;System;
 X-Ubuntu-Gettext-Domain=terminator
 X-Ayatana-Desktop-Shortcuts=NewWindow;
 Terminal=false
 
-Icon[en_US]=/home/amigo/.tue/installer/targets/tue-shortcuts/icons/terminatorAmigosSergios.png
+Icon[en_US]=/usr/share/pixmaps/tue/terminatorAmigosSergios.png
 
 Name[en_US]=Terminator amigossergios
 Comment[en_US]=Multiple terminals in one window
