fixed ado, and moved philips speech from target amigo3 to amigo since amigo1,2 need it for remote roslaunching on amigo3

--- a/amigo/install.yaml
+++ b/amigo/install.yaml
@@ -19,6 +19,10 @@
   name: ros-hokuyo_node
 - type: target
   name: ros-openni_launch
+  
+# Speech
+- type: target
+  name: ros-philips_text_to_speech
 
 # AMIGO aliases
 - type: target
