--- a/sergio/install.yaml
+++ b/sergio/install.yaml
@@ -20,6 +20,10 @@
 - type: target
   name: ros-openni_launch
 
+# Speech
+- type: target
+  name: ros-philips_text_to_speech
+
 # Sergio aliases
 - type: target
   name: sergio-user
