fixed variety install

--- a/tue-shortcuts/configs/variety/variety.conf
+++ b/tue-shortcuts/configs/variety/variety.conf
@@ -197,7 +197,8 @@ src13 = False|wallhaven|autumn
 src14 = False|wallhaven|nature
 src15 = False|wallhaven|macro
 src16 = False|wallhaven|leaves
-src17 = True|folder|/home/amigo/.tue/installer/targets/variety/desktopfotos
+src17 = False|folder|/home/amigo/.tue/installer/targets/variety/desktopfotos
+src18 = True|folder|/home/amigo/.tue/installer/targets/tue-shortcuts/desktopfotos
 
 # Image filters to apply randomly to every wallpaper (ImageMagick is used for this)
 # Each filter is filterX = <enabled or not|filter name|arguments to pass to ImageMagick when calling convert>
