--- a/tue-fancydesktop/configs/variety/variety.conf
+++ b/tue-fancydesktop/configs/variety/variety.conf
@@ -8,7 +8,7 @@ change_enabled = True
 change_interval = 300
 
 # download_enabled = <True or False>
-download_enabled = True
+download_enabled = False
 
 # download_interval = <interval in seconds - not less than 30>
 download_interval = 600
@@ -197,8 +197,7 @@ src13 = False|wallhaven|autumn
 src14 = False|wallhaven|nature
 src15 = False|wallhaven|macro
 src16 = False|wallhaven|leaves
-src17 = False|folder|/home/amigo/.tue/installer/targets/variety/desktopfotos
-src18 = True|folder|/home/amigo/.tue/installer/targets/tue-shortcuts/desktopfotos
+src17 = True|folder|/home/amigo/.tue/installer/targets/tue-fancydesktop/desktopfotos
 
 # Image filters to apply randomly to every wallpaper (ImageMagick is used for this)
 # Each filter is filterX = <enabled or not|filter name|arguments to pass to ImageMagick when calling convert>
