improved variety config

--- a/tue-fancydesktop/configs/variety/variety.conf
+++ b/tue-fancydesktop/configs/variety/variety.conf
@@ -8,7 +8,7 @@ change_enabled = True
 change_interval = 300
 
 # download_enabled = <True or False>
-download_enabled = False
+download_enabled = True
 
 # download_interval = <interval in seconds - not less than 30>
 download_interval = 600
@@ -48,7 +48,7 @@ clipboard_hosts = "wallbase.cc,ns223506.ovh.net,wallpapers.net,flickr.com,imgur.
 
 # Icon settings
 # icon = <Light, Dark, Current, None, or a full path to an image file>
-icon = Light
+icon = None
 
 # Prefer only images with this color:
 # desired_color_enabled = <True or False>
@@ -107,7 +107,7 @@ copyto_folder = Default
 # clock_enabled = <True or False>
 # clock_font = <FontName Size>, default is "Ubuntu Condensed, 70"
 # clock_date_font = <FontName Size>, default is "Ubuntu Condensed, 30"
-clock_enabled = False
+clock_enabled = True
 clock_font = "Ubuntu Condensed, 70"
 clock_date_font = "Ubuntu Condensed, 30"
 
@@ -197,7 +197,8 @@ src13 = False|wallhaven|autumn
 src14 = False|wallhaven|nature
 src15 = False|wallhaven|macro
 src16 = False|wallhaven|leaves
-src17 = True|folder|/home/amigo/.tue/installer/targets/tue-fancydesktop/desktopfotos
+src17 = False|folder|/home/amigo/.tue/installer/targets/variety/desktopfotos
+src18 = True|folder|/home/amigo/.tue/installer/targets/tue-shortcuts/desktopfotos
 
 # Image filters to apply randomly to every wallpaper (ImageMagick is used for this)
 # Each filter is filterX = <enabled or not|filter name|arguments to pass to ImageMagick when calling convert>
