put hardware on all robot pc's for easy launching

--- a/amigo/install.yaml
+++ b/amigo/install.yaml
@@ -14,6 +14,10 @@
 - type: target
   name: tue-middleware
 
+# Hardware  
+- type: target
+  name: tue-hardware
+
 # Sensors
 - type: target
   name: ros-hokuyo_node
