--- a/sergio/install.yaml
+++ b/sergio/install.yaml
@@ -13,6 +13,10 @@
 # Middleware
 - type: target
   name: tue-middleware
+  
+# Hardware
+- type: target
+  name: tue-hardware
 
 # Sensors
 - type: target
