tue-dev now also installs robot-console (natural language)

--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -14,6 +14,10 @@
 - type: target
   name: ros-rviz
 
+# Console
+- type: target
+  name: ros-nl_robot_console
+
 # Diagnostics
 - type: ros
   source:
