--- a/ros-challenge_test/install.yaml
+++ b/ros-challenge_test/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/challenge_test.git
+      url: https://github.com/tue-robotics/tue_robocup.git
+      sub-dir: challenge_test
