Using @LoyVanBeek's patch for executive_smach. Change may be reverted after https://github.com/ros/executive_smach/pull/41 is merged

--- a/ros-smach_msgs/install.yaml
+++ b/ros-smach_msgs/install.yaml
@@ -1,5 +1,9 @@
+#- type: ros
+#  source:
+#      type: system
+#      name: executive-smach
 - type: ros
   source:
-      type: system
-      name: executive-smach
-
+      type: git
+      url: https://github.com/LoyVanBeek/executive_smach.git
+      sub-dir: smach_msgs
