--- a/ros-smach/install.yaml
+++ b/ros-smach/install.yaml
@@ -1,5 +1,10 @@
+#- type: ros
+#  source:
+#      type: system
+#      name: executive-smach
 - type: ros
   source:
-      type: system
-      name: executive-smach
+      type: git
+      url: https://github.com/LoyVanBeek/executive_smach.git
+      sub-dir: smach
 
