--- a/ros-amigo_msgs/install.yaml
+++ b/ros-amigo_msgs/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/amigo_common/amigo_msgs
+      type: git
+      url: https://github.com/tue-robotics/amigo_msgs
 
