--- a/ros-pein_msgs/install.yaml
+++ b/ros-pein_msgs/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/pein_msgs
+      type: git
+      url: https://github.com/tue-robotics/pein_msgs
 
