--- a/ros-teleop/install.yaml
+++ b/ros-teleop/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/teleop
+      type: git
+      url: https://github.com/tue-robotics/teleop
 
