--- a/ros-tf_checker/install.yaml
+++ b/ros-tf_checker/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/tf_checker
+      type: git
+      url: https://github.com/tue-robotics/tf_checker
 
