--- a/ros-tue_costmap_msgs/install.yaml
+++ b/ros-tue_costmap_msgs/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/tue_costmap_msgs
+      type: git
+      url: https://github.com/tue-robotics/tue_costmap_msgs
 
