--- a/ros-tue_teleop_keyboard/install.yaml
+++ b/ros-tue_teleop_keyboard/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/tue_teleop_keyboard
+      type: git
+      url: https://github.com/tue-robotics/tue_teleop_keyboard
 
