--- a/ros-scl_filters/install.yaml
+++ b/ros-scl_filters/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
-      type: svn
-      url: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/scl_filters
+      type: git
+      url: https://github.com/tue-robotics/scl_filters
 
