fix(target): append .git for travis

--- a/ros-scl_filters/install.yaml
+++ b/ros-scl_filters/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/scl_filters
+      url: https://github.com/tue-robotics/scl_filters.git
 
