fixed fancy desktop wallpaper

--- a/tue-fancydesktop/configs/variety/variety.conf
+++ b/tue-fancydesktop/configs/variety/variety.conf
@@ -1,5 +1,5 @@
 # change_on_start = <True or False>
-change_on_start = False
+change_on_start = True
 
 # change_enabled = <True or False>
 change_enabled = True
@@ -8,7 +8,7 @@ change_enabled = True
 change_interval = 300
 
 # download_enabled = <True or False>
-download_enabled = True
+download_enabled = False
 
 # download_interval = <interval in seconds - not less than 30>
 download_interval = 600
@@ -184,11 +184,13 @@ quotes_favorites_format = fortune
 src1 = False|favorites|The Favorites folder
 src2 = False|fetched|The Fetched folder
 src3 = False|recommended|Recommended by Variety. Adapts to your taste as you mark images as favorite or trash.
-src4 = False|latest|Latest favorites by the other users of Variety.
+src4 = False|latest|Latest favorites by the other users of Variety. [May contain NSFW images]
 src5 = False|desktoppr|Random wallpapers from Desktoppr.co
 src6 = False|apod|NASA's Astronomy Picture of the Day
-src7 = False|earth|World Sunlight Map - live wallpaper from Opentopia.com
+src7 = False|earth|World Sunlight Map - live wallpaper from Die.net
 src8 = True|folder|/home/amigo/.tue/installer/targets/tue-fancydesktop/desktopfotos
+src9 = False|bing|Bing Photo of the Day
+src10 = False|unsplash|High-resolution photos from Unsplash.com
 
 # Image filters to apply randomly to every wallpaper (ImageMagick is used for this)
 # Each filter is filterX = <enabled or not|filter name|arguments to pass to ImageMagick when calling convert>
