--- a/ros-challenge_robozoo_2015/install.yaml
+++ b/ros-challenge_robozoo_2015/install.yaml
@@ -2,5 +2,4 @@
   source:
       type: git
       url: https://github.com/tue-robotics/tue_robocup.git
-      sub-dir: challenge_robo_zoo
-    
+      sub-dir: challenge_robozoo_2015
