--- a/sjoerd/install.yaml
+++ b/sjoerd/install.yaml
@@ -1,51 +1,40 @@
-- type: target
-  name: tue-dev
+# --------- TUE-DEV (without editors and such) ----------
+# Instead of tue-dev
 
-# Robots
+# Simulation
+- type: target
+  name: ros-fast_simulator
+- type: target
+  name: ros-fast_simulator_data
+
+# Middleware
+- type: target
+  name: tue-middleware
+- type: target
+  name: ros-tue_mobile_ui
+
+# Visualization
+- type: target
+  name: ros-rviz
+
+# Diagnostics
+- type: ros
+  source:
+      type: system
+      name: viz
+
+# -------------------- ROBOCUP --------------------
+
+- type: target
+  name: tue-robocup-at-home
+
+# -------------------- ROBOTS --------------------
+
+- type: target
+  name: ros-dashboard
 - type: target
   name: amigo-user
 - type: target
   name: sergio-user
-
-# DEV
-- type: target
-  name: ros-fast_simulator2
-
-# ED
-#- type: target
-#  name: ros-ed_sensor_integration
-- type: target
-  name: ros-amigo_ed_tutorials
-- type: target
-  name: ros-ed_localization 
-- type: target
-  name: ros-ed_wbc
-
-# Editing
-- type: target
-  name: sublime3
-
-# Version control
-- type: target
-  name: gitsu
-
-# Web development
-- type: target
-  name: grunt
-- type: target
-  name: bower
-
-# Docker
-- type: target
-  name: docker
-
-# Misc
-- type: target
-  name: ros-stem_tracker
-- type: target
-  name: ros-tf_checker
-- type: target
-  name: ros-kinect_driver
-
 
 
