Added gripper_detector dependency on aruco-ros

--- a/ros-gripper_detector/install.yaml
+++ b/ros-gripper_detector/install.yaml
@@ -1,4 +1,8 @@
 - type: ros
   source:
+      type: system
+      name: aruco-ros
+- type: ros
+  source:
       type: git
       url: https://github.com/tue-robotics/gripper_detector.git
