--- a/ros-tue_filesystem/install.yaml
+++ b/ros-tue_filesystem/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/tue_filesystem
+      url: https://github.com/tue-robotics/tue_filesystem.git
 
