--- a/ros-geolib2/install.yaml
+++ b/ros-geolib2/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/geolib2
+      url: https://github.com/tue-robotics/geolib2.git
 
