--- a/ros-rgbd/install.yaml
+++ b/ros-rgbd/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/rgbd
+      url: https://github.com/tue-robotics/rgbd.git
 
