--- a/ros-tue_manipulation/install.yaml
+++ b/ros-tue_manipulation/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/tue_manipulation
+      url: https://github.com/tue-robotics/tue_manipulation.git
