--- a/ros-code_profiler/install.yaml
+++ b/ros-code_profiler/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
       type: git
-      url: https://github.com/tue-robotics/code_profiler
+      url: https://github.com/tue-robotics/code_profiler.git
 
