--- a/tue-fancydesktop/configs/terminator/config
+++ b/tue-fancydesktop/configs/terminator/config
@@ -1,7 +1,9 @@
 [global_config]
+  suppress_multiple_term_dialog = True
 [keybindings]
 [profiles]
   [[default]]
+    background_image = None
     scrollback_infinite = True
 [layouts]
   [[fourscreens]]
@@ -46,6 +48,74 @@
       type = Terminal
       order = 0
       parent = child5
+  [[SergioStartup]]
+    [[[child0]]]
+      position = 0:24
+      type = Window
+      order = 0
+      parent = ""
+      size = 1920, 1004
+    [[[child1]]]
+      position = 502
+      type = VPaned
+      order = 0
+      parent = child0
+    [[[child2]]]
+      position = 960
+      type = HPaned
+      order = 0
+      parent = child1
+    [[[child3]]]
+      position = 251
+      type = VPaned
+      order = 0
+      parent = child2
+    [[[child4]]]
+      position = 480
+      type = HPaned
+      order = 0
+      parent = child3
+    [[[child9]]]
+      position = 960
+      type = HPaned
+      order = 1
+      parent = child1
+    [[[terminal11]]]
+      profile = default
+      command = until ssh -qo ConnectTimeout=1 -X amigo@sergio3; do echo waiting for sergio3 to come online...; sleep 2; done
+      type = Terminal
+      order = 1
+      parent = child9
+    [[[terminal10]]]
+      profile = default
+      command = until ssh -qo ConnectTimeout=1 -X amigo@sergio1; do echo waiting for sergio1 to come online...; sleep 2; done
+      type = Terminal
+      order = 0
+      parent = child9
+    [[[terminal5]]]
+      profile = default
+      command = until ssh -qo ConnectTimeout=1 -X amigo@sergio1; do echo waiting for sergio1 to come online...; sleep 2; done
+      type = Terminal
+      order = 0
+      parent = child4
+    [[[terminal7]]]
+      profile = default
+      command = until ssh -qo ConnectTimeout=1 -X amigo@sergio1; do echo waiting for sergio1 to come online...; sleep 2; done
+      type = Terminal
+      order = 1
+      parent = child3
+    [[[terminal6]]]
+      profile = default
+      command = until ssh -qo ConnectTimeout=1 -X amigo@sergio1; do echo waiting for sergio1 to come online...; sleep 2; done
+      type = Terminal
+      order = 1
+      parent = child4
+    [[[terminal8]]]
+      profile = default
+      command = until ssh -qo ConnectTimeout=1 -X amigo@sergio1; do echo waiting for sergio1 to come online...; sleep 2; done
+      type = Terminal
+      order = 1
+      parent = child2
   [[default]]
     [[[child1]]]
       type = Terminal
@@ -167,6 +237,68 @@
       type = Terminal
       order = 0
       parent = child5
+  [[New Layout]]
+    [[[child0]]]
+      position = 0:24
+      type = Window
+      order = 0
+      parent = ""
+      size = 1920, 1004
+    [[[child1]]]
+      position = 502
+      type = VPaned
+      order = 0
+      parent = child0
+    [[[child2]]]
+      position = 960
+      type = HPaned
+      order = 0
+      parent = child1
+    [[[child3]]]
+      position = 251
+      type = VPaned
+      order = 0
+      parent = child2
+    [[[child4]]]
+      position = 480
+      type = HPaned
+      order = 0
+      parent = child3
+    [[[child9]]]
+      position = 960
+      type = HPaned
+      order = 1
+      parent = child1
+    [[[terminal11]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child9
+    [[[terminal10]]]
+      profile = default
+      type = Terminal
+      order = 0
+      parent = child9
+    [[[terminal5]]]
+      profile = default
+      type = Terminal
+      order = 0
+      parent = child4
+    [[[terminal7]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child3
+    [[[terminal6]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child4
+    [[[terminal8]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child2
   [[amigos]]
     [[[child0]]]
       position = 0:24
@@ -213,4 +345,72 @@
       order = 0
       parent = child5
       command = until ssh -qo ConnectTimeout=1 -X amigo@amigo3; do echo waiting for amigo3 to come online...; sleep 2; done
+  [[AmigoStartup]]
+    [[[child0]]]
+      position = 0:24
+      type = Window
+      order = 0
+      parent = ""
+      size = 1920, 1004
+    [[[child1]]]
+      position = 502
+      type = VPaned
+      order = 0
+      parent = child0
+    [[[child2]]]
+      position = 960
+      type = HPaned
+      order = 0
+      parent = child1
+    [[[child3]]]
+      position = 251
+      type = VPaned
+      order = 0
+      parent = child2
+    [[[child4]]]
+      position = 480
+      type = HPaned
+      order = 0
+      parent = child3
+    [[[child9]]]
+      position = 960
+      type = HPaned
+      order = 1
+      parent = child1
+    [[[terminal11]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child9
+      command = until ssh -qo ConnectTimeout=1 -X amigo@amigo1; do echo waiting for amigo1 to come online...; sleep 2; done
+    [[[terminal10]]]
+      profile = default
+      command = until ssh -qo ConnectTimeout=1 -X amigo@amigo2; do echo waiting for amigo2 to come online...; sleep 2; done
+      type = Terminal
+      order = 0
+      parent = child9
+    [[[terminal5]]]
+      profile = default
+      type = Terminal
+      order = 0
+      parent = child4
+      command = until ssh -qo ConnectTimeout=1 -X amigo@amigo1; do echo waiting for amigo1 to come online...; sleep 2; done
+    [[[terminal7]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child3
+      command = until ssh -qo ConnectTimeout=1 -X amigo@amigo1; do echo waiting for amigo1 to come online...; sleep 2; done
+    [[[terminal6]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child4
+      command = until ssh -qo ConnectTimeout=1 -X amigo@amigo3; do echo waiting for amigo3 to come online...; sleep 2; done
+    [[[terminal8]]]
+      profile = default
+      type = Terminal
+      order = 1
+      parent = child2
+      command = until ssh -qo ConnectTimeout=1 -X amigo@amigo1; do echo waiting for amigo1 to come online...; sleep 2; done
 [plugins]
