fix(tue-middleware): also install gmapping

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -31,6 +31,10 @@
 - type: target
   name: ros-text_to_speech
 
+# SLAM
+- type: target
+  name: ros-gmapping
+
 # World model
 - type: target
   name: ros-ed
