--- a/amigo/install.yaml
+++ b/amigo/install.yaml
@@ -26,8 +26,8 @@
   name: ros-openni_launch
   
 # Speech
-- type: target
-  name: ros-philips_text_to_speech
+#- type: target
+#  name: ros-philips_text_to_speech
 
 # AMIGO aliases
 - type: target
