targets(amigo, sergio) Added tensorflow object recognition to amigo and sergio targets

--- a/amigo/install.yaml
+++ b/amigo/install.yaml
@@ -4,7 +4,7 @@
 # astart
 - type: target
   name: ros-battery_manager
-  
+
 - type: target
   name: ros-emergency_speakup
 
@@ -15,7 +15,7 @@
 - type: target
   name: tue-middleware
 
-# Hardware  
+# Hardware
 - type: target
   name: tue-hardware
 
@@ -24,7 +24,11 @@
   name: ros-hokuyo_node
 - type: target
   name: ros-openni_launch
-  
+
+# Perception
+- type: target
+  name: ros-tensorflow_object_recognition
+
 # Speech
 #- type: target
 #  name: ros-philips_text_to_speech
