--- a/ros-teleop/install.yaml
+++ b/ros-teleop/install.yaml
@@ -1,4 +1,4 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/teleop
+    url: https://github.com/tue-robotics-graveyard/teleop.git
