--- a/ros-rtt_actionlib/install.yaml
+++ b/ros-rtt_actionlib/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: rtt-actionlib
+    type: git
+    url: https://github.com/orocos/rtt_ros_integration
+    sub-dir: rtt_actionlib
