--- a/ros-rtt_rosnode/install.yaml
+++ b/ros-rtt_rosnode/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: rtt-ros-integration
+    type: git
+    url: https://github.com/orocos/rtt_ros_integration
+    sub-dir: rtt_rosnode
