--- a/ros-rtt_std_msgs/install.yaml
+++ b/ros-rtt_std_msgs/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: rtt-ros-comm
+    type: git
+    url: https://github.com/orocos/rtt_ros_integration
+    sub-dir: typekits/rtt_std_msgs
