--- a/ros-robot_skills/install.yaml
+++ b/ros-robot_skills/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/tue-robotics/robot_skills.git
+    url: https://github.com/tue-robotics/tue_robocup.git
+    sub-dir: robot_skills
