Add ar-track-alvar to tue-middleware

--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -27,6 +27,10 @@
 - type: target
   name: ros-tue_manipulation
 
+# AR tracking
+- type: target
+  name: ros-ar_track_alvar
+
 # Speech
 - type: target
   name: ros-text_to_speech
