--- a/orocos_toolchain/install.yaml
+++ b/orocos_toolchain/install.yaml
@@ -2,3 +2,9 @@
   name: ruby-dev
 - type: system
   name: libreadline-dev
+- type: ros
+  source:
+    type: git
+    url: https://github.com/orocos-toolchain/orocos_toolchain.git
+    sub-dir: orocos_toolchain
+    version: toolchain-2.9
