--- a/ros-rtt_std_msgs/install.yaml
+++ b/ros-rtt_std_msgs/install.yaml
@@ -3,3 +3,4 @@
     type: git
     url: https://github.com/orocos/rtt_ros_integration
     sub-dir: typekits/rtt_std_msgs
+    version: toolchain-2.9
