--- a/ros-audio_common_msgs/install.yaml
+++ b/ros-audio_common_msgs/install.yaml
@@ -1,4 +1,5 @@
 - type: ros
   source:
-    type: system
-    name: audio-common-msgs
+    type: git
+    url: https://github.com/tue-robotics/audio_common.git
+    sub-dir: audio_common_msgs
