Revert "chore(): check out source for audio_common_msgs" missing deps
This reverts commit 7a53e86bba0ab65ef5e328150528c001857264e9.

--- a/ros-audio_common_msgs/install.yaml
+++ b/ros-audio_common_msgs/install.yaml
@@ -1,5 +1,4 @@
 - type: ros
   source:
-    type: git
-    url: https://github.com/tue-robotics/audio_common.git
-    sub-dir: audio_common_msgs
+    type: system
+    name: audio-common-msgs
