feat(audio_common): targets for audio_common_msgs, audio_capture and deps

--- a/ros-audio_capture/install.yaml
+++ b/ros-audio_capture/install.yaml
@@ -2,4 +2,4 @@
   source:
     type: git
     url: https://github.com/tue-robotics/audio_common.git
-    sub-dir: audio_common_msgs
+    sub-dir: audio_capture
