--- a/ros-rtt/install.yaml
+++ b/ros-rtt/install.yaml
@@ -1,5 +1,5 @@
 - type: ros
   source:
     type: git
-    url: https://github.com/orocos-toolchain/rtt.git
+    url: https://github.com/tue-robotics/rtt.git
     version: toolchain-2.9
