--- a/tue-middleware/install.yaml
+++ b/tue-middleware/install.yaml
@@ -2,24 +2,10 @@
 - type: target
   name: tue-common
 
-- type: target
-  name: ros-robot_state_publisher
-
-# Diagnostics (TODO: Is this needed? Causes HDDtemp question on install)
-- type: target
-  name: ros-diagnostic_aggregator
-- type: system
-  name: sysstat
-
-# Web interaction
-- type: target
-  name: ros-tue_mobile_ui
-
-# Executive
-
 # Navigation
 - type: target
   name: ros-cb_base_navigation
+
 - type: target
   name: ros-dwa_local_planner
 
@@ -31,13 +17,6 @@
 - type: target
   name: ros-ar_track_alvar
 
-# Speech
-- type: target
-  name: ros-text_to_speech
-
-- type: target
-  name: ros-hmi
-
 # SLAM
 - type: target
   name: ros-gmapping
@@ -46,22 +25,35 @@
 - type: target
   name: ros-ed
 - type: target
+
   name: ros-ed_perception
 - type: target
+
   name: ros-ed_perception_models
 - type: target
+
   name: ros-ed_gui_server
 - type: target
+
   name: ros-ed_localization
 - type: target
   name: ros-ed_navigation
+
 - type: target
   name: ros-ed_sensor_integration
+
 - type: target
   name: ros-head_ref_ed_client
+
 - type: target
   name: ros-image_recognition
 
 # Execution
 - type: target
   name: ros-action_server
+
+- type: target
+  name: ros-tensorflow_ros
+
+- type: target
+  name: ros-openface_ros
