--- a/tue-dev/install.yaml
+++ b/tue-dev/install.yaml
@@ -52,3 +52,11 @@
   name: chrome
 - type: target
   name: gitsu
+
+# Console
+- type: target
+  name: ros-nl_robot_console
+
+# ED rviz plugin
+- type: target
+  name: ros-ed_rviz_plugins
